--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name
-title: Hugo Academic CV Theme
+title: JOPRO - Research Incubator and Mentoring
 # Website URL
 baseURL: 'https://example.com/'
 
